# breathing_simulator

./: .env  .gitignore  pyproject.toml
cad_files/: FM_to_Chamber v1.f3d  FanSideConnectingPipe v3.f3d  SFMJoiner.f3d
communication/: client_test.py  flow_definition.pb.c  flow_definition.pb.h  flow_definition.proto  main.py
hardware/: L298N.py  SFM3000.py
tests/: .blower_tests.py.swp  blower_tests.py
usb_sim_test/: platformio.ini
usb_sim_test/lib/flow_meter/: flow_meter.cpp  flow_meter.h
usb_sim_test/lib/motor_controller/: motor_controller.cpp  motor_controller.h
usb_sim_test/src/: main.cpp
usb_sim_test/test/: 9hv.cpp  controller.cpp  fs1027_an.cpp  fs1027_i2c.cpp  l298n.cpp  sfm.cpp  sfm3000.cpp  sfm3003.cpp  spark.cpp  t3.cpp  tmp.cpp
usb_simulator/: platformio.ini
usb_simulator/src/: main.cpp  workspace.code-workspace
usb_simulator/test/: sfm.cpp
usb_simulator_nano/: platformio.ini
usb_simulator_nano/lib/Fan/: Fan.cpp  Fan.h
usb_simulator_nano/lib/PID/: PID.cpp  PID.h
usb_simulator_nano/lib/SFM3000/: SFM3000.cpp  SFM3000.h
usb_simulator_nano/lib/configuration/: configuration.h
usb_simulator_nano/lib/enums/: enums.h
usb_simulator_nano/lib/flow_definition/: example.c  flow_definition.pb.c  flow_definition.pb.h
usb_simulator_nano/lib/flow_meter/: flow_meter.cpp  flow_meter.h
usb_simulator_nano/lib/flow_profile/: flow_profile.cpp  flow_profile.h
usb_simulator_nano/lib/message_parser/: message_parser.c  message_parser.h  (+1 more)
usb_simulator_nano/src/: main.cpp
usb_simulator_nano/test/: main_old.cpp
web-interface/templates/: index.html
(+3 files in other folders)
